# simple-path-match

./: Cargo.toml  README.md
src/: lib.rs  platform_properties.rs
